Modificación de campo severidad
Se cambia de un combo list a label.

--- a/TableroSLAs/IncidenteDetalle2.html
+++ b/TableroSLAs/IncidenteDetalle2.html
@@ -945,10 +945,7 @@ jQuery(function ($) {
                         <tr class="Controls">
                           <td class="th"><label for="mc_calificacion_incidenteseveridad">Severidad</label></td> 
                           <td><label for="mc_fcacion_incidentesh_Severidad" style="display: none;">&nbsp;</label> 
-                            <select onchange="ayudaMostrarTotal(mc_calificacion_incidenteCheckBox1)" id="mc_calificacion_incidenteslSeveridad" name="{slSeveridad_Name}">
-                              <option selected value="">{res:CCS_SelectValue}</option>
-                              {slSeveridad_Options}
-                            </select>
+                            {slSeveridad}
  &nbsp;&nbsp; </td>
                         </tr>
  
