Modificación al JS
Se elimina el texto de observaciones cuando ya se a guardado el registro
y eliminado el campo, con js del html se rrellena este campo cuando sólo
debia de llenarse sólo la primera vez antes de guardar.

--- a/TableroSLAs/PPMCsDefFugDetalle.html
+++ b/TableroSLAs/PPMCsDefFugDetalle.html
@@ -22,7 +22,8 @@
 function calculaSLA(){
     
     var  sObs = document.getElementById("mc_info_rs_cr_deffugObservaciones").value;
-    if(sObs.length == 0){
+    var  esEdicion = document.getElementById("mc_info_rs_cr_deffugButton_Update");
+    if(sObs.length == 0 and !esEdicion){
         var iTotalDefectos=document.getElementById("TotalDefectos").innerHTML;
         sObs = "El nivel de servicio se reporta como " ;
         if(iTotalDefectos.valueOf()>0){
