Módulo comparativo con modificaciones
Se generan tablas con los datos coparativos de cada mes , para
eficientar la consulta ademas de la forma de presentar la comparación.

--- a/TableroSLAs/TableroSLAs.html
+++ b/TableroSLAs/TableroSLAs.html
@@ -95,6 +95,10 @@
       <div style="display:{iTableroCDS}">
         &nbsp;Tablero del CDS:&nbsp;<a href="{UrlCDS_Src}" id="UrlCDS">{UrlCDS}</a> 
       </div>
+      <br>
+      <div style="display:{iTableroCDS}">
+        Comparativo: <a href="{Link1_Src}" id="Link1">{Link1}</a> 
+      </div>
     </td>
   </tr>
  
