--- a/TableroSLAs/IncidenteDetalle2.html
+++ b/TableroSLAs/IncidenteDetalle2.html
@@ -798,7 +798,7 @@ jQuery(function ($) {
                         <td class="th"><strong>Descripción</strong></td> 
                         <td><strong>Liberación AVL&nbsp;</strong></td> 
                         <td><strong>Resuelto</strong></td> 
-                        <td><strong>Horas Invertida<font size="2">s</font></strong></td>
+                        <td><strong>Horas Invertidas</strong></td>
                       </tr>
  
                       <tr class="Controls">
@@ -958,7 +958,7 @@ jQuery(function ($) {
  
                         <tr class="Controls">
                           <td class="th"><label for="mc_calificacion_incidenteseveridad">Severidad</label></td> 
-                          <td><label for="mc_fcacion_incidentesh_Severidad" style="display: none;">&nbsp;</label> {slSeveridad} &nbsp;&nbsp; </td>
+                          <td><label for="mc_fcacion_incidentesh_Severidad" style="display: none;">&nbsp;</label> <input type="hidden" id="mc_calificacion_incidentehslSeveridad" value="{hslSeveridad}" name="{hslSeveridad_Name}">{slSeveridad} &nbsp;&nbsp; </td>
                         </tr>
  
                         <tr class="Controls">
