Cambios para el funcionamiento de la sección de Seguimiento Operativo
En el login, se agrega variable se session para   ser usada en la parte
de Seguimiento operativo

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -1,9 +1,9 @@
 <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
-<table style="BACKGROUND-COLOR: rgb(242,242,243)" border="0" width="100%">
+<table style="BACKGROUND-COLOR: rgb(242,242,243)" width="100%" border="0">
   <tr style="HEIGHT: 80px">
-    <td><a href="{ImageLink1}" id="HeaderImageLink1"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px" alt="{ImageLink1}" src="{hdLogoPath}" width="215" height="100"></a> </td> 
+    <td><a href="{ImageLink1}" id="HeaderImageLink1"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" alt="{ImageLink1}" src="{hdLogoPath}" width="215" height="100"></a> </td> 
     <td width="40%"><input type="hidden" id="HeaderhdLogoPath" value="{hdLogoPath}" name="{hdLogoPath_Name}">
-      <div style="TEXT-ALIGN: center; COLOR: rgb(48,114,29); FONT-SIZE: 20px; FONT-WEIGHT: bold">
+      <div style="FONT-SIZE: 20px; FONT-WEIGHT: bold; COLOR: rgb(48,114,29); TEXT-ALIGN: center">
         Administración Central de Desarrollo<br>
         y Mantenimiento de Aplicaciones <br>
         <br>
@@ -12,44 +12,44 @@
  </td> 
     <td style?text-align:right?>
       <!-- BEGIN Panel pnlMenu -->
-      <table style="TEXT-ALIGN: right; BACKGROUND-COLOR: rgb(218,224,228); COLOR: rgb(0,122,173); FONT-WEIGHT: bold">
+      <table style="FONT-WEIGHT: bold; COLOR: rgb(0,122,173); TEXT-ALIGN: right; BACKGROUND-COLOR: rgb(218,224,228)">
         <tr style="HEIGHT: 60px">
           <!-- BEGIN Panel Panel3 -->
           <td>
-            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{lkUniverso_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkUniverso">Universo de medición</a> 
+            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
+<a href="{lkUniverso_Src}" id="HeaderpnlMenuPanel3lkUniverso" style="POSITION: relative; TOP: 20%">Universo de medición</a> 
             </div>
  </td> 
           <td>
-            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{lkIncidentes_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkIncidentes">Incidentes</a> 
+            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
+<a href="{lkIncidentes_Src}" id="HeaderpnlMenuPanel3lkIncidentes" style="POSITION: relative; TOP: 20%">Incidentes</a> 
             </div>
  </td> 
           <td>
-            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{lkRequerimientos_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkRequerimientos">SLAs de apertura</a> 
+            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
+<a href="{lkRequerimientos_Src}" id="HeaderpnlMenuPanel3lkRequerimientos" style="POSITION: relative; TOP: 20%">SLAs de apertura</a> 
             </div>
  </td> 
           <td>
-            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{lkPPMCCierre_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3lkPPMCCierre">SLAs de cierre</a> 
+            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
+<a href="{lkPPMCCierre_Src}" id="HeaderpnlMenuPanel3lkPPMCCierre" style="POSITION: relative; TOP: 20%">SLAs de cierre</a> 
             </div>
  </td> 
           <td>
-            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-<a href="{Link2_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3Link2">Eficiencia<br>
+            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
+<a href="{Link2_Src}" id="HeaderpnlMenuPanel3Link2" style="POSITION: relative; TOP: 20%">Eficiencia<br>
               presupuestal</a> 
             </div>
  </td> 
           <td>
-            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-              <!-- BEGIN Link Link3 --><a href="{Link3_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenuPanel3Link3">SLAs CAPC</a><!-- END Link Link3 -->
+            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
+              <!-- BEGIN Link Link3 --><a href="{Link3_Src}" id="HeaderpnlMenuPanel3Link3" style="POSITION: relative; TOP: 20%">SLAs CAPC</a><!-- END Link Link3 -->
             </div>
  </td> <!-- END Panel Panel3 -->
           <td>
             <!-- BEGIN Panel pnlMenuAdmin -->
-            <div style="TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff; WIDTH: 100px; HEIGHT: 40px; COLOR: #ffffff; FONT-SIZE: 12px; VERTICAL-ALIGN: bottom">
-              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" style="POSITION: relative; TOP: 20%" id="HeaderpnlMenupnlMenuAdminlkAdmin">Admón.</a><!-- END Link lkAdmin -->
+            <div style="FONT-SIZE: 12px; HEIGHT: 40px; WIDTH: 100px; VERTICAL-ALIGN: bottom; COLOR: #ffffff; TEXT-ALIGN: center; BACKGROUND-COLOR: #ffffff">
+              <!-- BEGIN Link lkAdmin --><a href="{lkAdmin_Src}" id="HeaderpnlMenupnlMenuAdminlkAdmin" style="POSITION: relative; TOP: 20%">Admón.</a><!-- END Link lkAdmin -->
             </div>
  <!-- END Panel pnlMenuAdmin --></td> 
         </tr>
@@ -64,8 +64,8 @@
 <tr style="HEIGHT: 25px">
   <td colspan="2">
     <!-- BEGIN Panel Panel2 -->
-    <div style="MARGIN: 0px 10px; FLOAT: left">
-      <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
+    <div style="FLOAT: left; MARGIN: 0px 10px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td class="HeaderLeft"></td> 
           <td class="th"><strong>&nbsp;<a href="{Link4_Src}" id="HeaderPanel2Link4">Tablero SLAs</a></strong>&nbsp;</td> 
@@ -76,8 +76,8 @@
  
     </div>
  
-    <div style="MARGIN: 0px 10px 0px 0px; FLOAT: left">
-      <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
+    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td class="HeaderLeft"></td> 
           <td class="th"><strong>&nbsp;<a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y mediciones</a></strong>&nbsp;</td> 
@@ -93,31 +93,44 @@
     </div>-->
     <!-- END Panel Panel2 -->
     <!-- BEGIN Panel Panel4 -->
-    <!--&nbsp;-->
-    <table style="WIDTH: 25% !important" class="Header" border="0" cellspacing="0" cellpadding="0">
-      <tr>
-        <td class="HeaderLeft"></td> 
-        <td class="th"><strong>&nbsp; 
-          <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
-        <td class="HeaderRight"></td> 
-      </tr>
- 
-    </table>
+    <div style="FLOAT: left; MARGIN: 0px 10px">
+	    <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+	      <tr>
+	        <td class="HeaderLeft"></td> 
+	        <td class="th"><strong>&nbsp; 
+	          <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
+	        <td class="HeaderRight"></td> 
+	      </tr>
+	 
+	    </table>
+    </div>
+    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px"> 
+	    <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+	      <tr>
+	        <td class="HeaderLeft"></td> 
+	        <td class="th">
+	          <strong><!-- BEGIN Link Link7 --><a href="{Link7_Src}" id="HeaderPanel4Link7">Seguimiento Operativo</a><!-- END Link Link7 -->{LabelSeguimientoOperativo}<strong></strong>
+	          </strong></td> 
+	        <td class="HeaderRight"></td> 
+	      </tr>
+	 
+	    </table>
+    </div>
  <!-- END Panel Panel4 --></td> 
   <td>
     <!-- BEGIN Panel Panel1 -->
-    <table style="PADDING-BOTTOM: 0px; BORDER-RIGHT-WIDTH: 1px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 1px; PADDING-TOP: 0px" width="437">
+    <table style="BORDER-LEFT-WIDTH: 1px; BORDER-RIGHT-WIDTH: 1px; BORDER-BOTTOM-WIDTH: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 0px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px" width="437">
       <tr style="HEIGHT: 24px">
         <td>
-          <!-- BEGIN ImageLink img_abre_pantalla --><a href="{img_abre_pantalla}" id="HeaderPanel1img_abre_pantalla"><img style="BORDER-RIGHT-WIDTH: 0px; BORDER-TOP-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-LEFT-WIDTH: 0px" alt="{img_abre_pantalla}" src="images/abre_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green; font-weigth: bold">Ver pantalla completa</font></a> <!-- END ImageLink img_abre_pantalla --></td> 
-        <td style="BACKGROUND-COLOR: rgb(222,222,213); WIDTH: 30%; COLOR: rgb(0,122,173); FONT-SIZE: 10px; FONT-WEIGHT: bold">
-          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 5px">
+          <!-- BEGIN ImageLink img_abre_pantalla --><a href="{img_abre_pantalla}" id="HeaderPanel1img_abre_pantalla"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" alt="{img_abre_pantalla}" src="images/abre_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green; font-weigth: bold">Ver pantalla completa</font></a> <!-- END ImageLink img_abre_pantalla --></td> 
+        <td style="FONT-SIZE: 10px; WIDTH: 30%; FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(222,222,213)">
+          <div style="HEIGHT: 24px; COLOR: #444444; MARGIN-LEFT: 5px; BACKGROUND-COLOR: #ffffff">
             <img style="MARGIN-TOP: 5px" src="{imgUserPath}"></img>&nbsp;&nbsp;Usuario:&nbsp;<a href="{lSesion_Src}" id="HeaderPanel1lSesion">{lSesion}</a> 
           </div>
  </td> 
-        <td style="BACKGROUND-COLOR: rgb(222,222,213); WIDTH: 30%; COLOR: rgb(0,122,173); FONT-SIZE: 10px; FONT-WEIGHT: bold">
-          <div style="BACKGROUND-COLOR: #ffffff; HEIGHT: 24px; MARGIN-LEFT: 0px">
-            &nbsp;<img style="MARGIN-TOP: 5px" id="HeaderImage1" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> 
+        <td style="FONT-SIZE: 10px; WIDTH: 30%; FONT-WEIGHT: bold; COLOR: rgb(0,122,173); BACKGROUND-COLOR: rgb(222,222,213)">
+          <div style="HEIGHT: 24px; MARGIN-LEFT: 0px; BACKGROUND-COLOR: #ffffff">
+            &nbsp;<img id="HeaderImage1" style="MARGIN-TOP: 5px" alt="Cerrar Sesión" src="{imgCierrePath}">&nbsp; <a href="{Link1_Src}" id="HeaderPanel1Link1">Cerrar Sesión</a> 
           </div>
  </td> 
         <td><a href="/MyMSDMA4/PlayerPackage/default.htm" target="_blank"><img border="0" src="images/ayuda2.jpg" width="24" height="24"></a> </td> 
