Corrección al filtor de acceso a opción de Seguimiento Operativo
Corrección al filtor de acceso a opción de Seguimiento Operativo

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -94,27 +94,29 @@
     <!-- END Panel Panel2 -->
     <!-- BEGIN Panel Panel4 -->
     <div style="FLOAT: left; MARGIN: 0px 10px">
-	    <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
-	      <tr>
-	        <td class="HeaderLeft"></td> 
-	        <td class="th"><strong>&nbsp; 
-	          <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
-	        <td class="HeaderRight"></td> 
-	      </tr>
-	 
-	    </table>
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+          <td class="HeaderLeft"></td> 
+          <td class="th"><strong>&nbsp; 
+            <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
+          <td class="HeaderRight"></td> 
+        </tr>
+ 
+      </table>
+ 
     </div>
-    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px"> 
-	    <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
-	      <tr>
-	        <td class="HeaderLeft"></td> 
-	        <td class="th">
-	          <strong><!-- BEGIN Link Link7 --><a href="{Link7_Src}" id="HeaderPanel4Link7">Seguimiento Operativo</a><!-- END Link Link7 -->{LabelSeguimientoOperativo}<strong></strong>
-	          </strong></td> 
-	        <td class="HeaderRight"></td> 
-	      </tr>
-	 
-	    </table>
+ 
+    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+          <td class="HeaderLeft"></td> 
+          <td class="th"><strong>
+            <!-- BEGIN Link Link7 --><a href="{Link7_Src}" id="HeaderPanel4Link7">Seguimiento Operativo</a><!-- END Link Link7 -->{LabelSeguimientoOperativo}<strong></strong> </strong></td> 
+          <td class="HeaderRight"></td> 
+        </tr>
+ 
+      </table>
+ 
     </div>
  <!-- END Panel Panel4 --></td> 
   <td>
