Se reactiva el botón de pantalla completa para los reportes
Se reactiva el botón de pantalla completa para los reportes de métricas

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -1,5 +1,5 @@
 <meta content="text/html; charset=windows-1252" http-equiv="Content-Type">
-<table style="BACKGROUND-COLOR: rgb(242,242,243)" width="100%" border="0">
+<table id="encabezado" style="BACKGROUND-COLOR: rgb(242,242,243)" width="100%" border="0">
   <tr style="HEIGHT: 80px">
     <td><a href="{ImageLink1}" id="HeaderImageLink1"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" alt="{ImageLink1}" src="{hdLogoPath}" width="215" height="100"></a> </td> 
     <td width="40%"><input type="hidden" id="HeaderhdLogoPath" value="{hdLogoPath}" name="{hdLogoPath_Name}">
