--- a/TableroSLAs/MuestraReporte.html
+++ b/TableroSLAs/MuestraReporte.html
@@ -16,7 +16,8 @@ document.getElementById("rep_metri").style.height = "650px";
         
         document.getElementById("opt_ocultar").style.display = "none";
         document.getElementById("opt_mostrar").style.display = "inline";
-        document.getElementById("encabezado").style.display = "none";
+document.getElementById("encabezado").style.display = "none";
+
 } 
 
 function mostrar(){
@@ -35,8 +36,8 @@ document.getElementById("encabezado").style.display = "inline";
 <link rel="stylesheet" type="text/css" href="Styles/Austere4/Style_Components_doctype.css">
 <link rel="stylesheet" type="text/css" href="Styles/Austere4/jquery-ui.css">
 </head>
-<body>
-<p id="encabezado">{Header} </p>
+<body  onload="{func_pantalla}">
+<p >{Header}</p>
 <div id="opt_mostrar" style="DISPLAY: none" align="left" border="0">
   <!--<input type="image" id="ImageButton2" alt="" src="images/cierra_verde.jpg" height="25" name="ImageButton2" whidth="25">-->
 <a href="{ImageLink2}" id="ImageLink2"><img style="BORDER-TOP: 0px; BORDER-RIGHT: 0px; BORDER-BOTTOM: 0px; BORDER-LEFT: 0px" alt="{ImageLink2}" src="images/cierra_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green">Ver pantalla normal</font></a> 
@@ -59,9 +60,8 @@ document.getElementById("encabezado").style.display = "inline";
                   <tr>
                     <td class="HeaderLeftAustere4"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td> 
                     <td class="thAustere4"><strong>Reportes</strong></td> 
-                    <td class="HeaderRightAustere4"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td> 
+                    <td class="HeaderRightAustere4"><img alt="" src="Styles/Austere4/Images/Spacer.gif"></td>
                   </tr>
- 
                 </table>
  
                 <table class="GridAustere4" cellspacing="0" cellpadding="0">
@@ -71,7 +71,6 @@ document.getElementById("encabezado").style.display = "inline";
                     <th scope="col">Grupo&nbsp;</th>
  
                     <th scope="col">Nombre</th>
- 
                   </tr>
  <!-- END Section Page_Header -->
                   <!-- BEGIN Section Page_Footer -->
@@ -88,44 +87,41 @@ document.getElementById("encabezado").style.display = "inline";
                       <!-- BEGIN Next_On --><a href="{Next_URL}">Siguiente</a> <!-- END Next_On -->
                       <!-- BEGIN Next_Off -->Siguiente <!-- END Next_Off -->
                       <!-- BEGIN Last_On --><a href="{Last_URL}">Final</a> <!-- END Last_On -->
-                      <!-- BEGIN Last_Off -->Final <!-- END Last_Off --></span><!-- END Navigator Navigator --></td> 
+                      <!-- BEGIN Last_Off -->Final <!-- END Last_Off --></span><!-- END Navigator Navigator --></td>
                   </tr>
  <!-- END Section Page_Footer -->
                   <!-- BEGIN Section Grupo_Header -->
                   <tr class="GroupCaptionAustere4">
                     <th colspan="2" scope="col">{Grupo} </th>
- 
                   </tr>
  <!-- END Section Grupo_Header -->
                   <!-- BEGIN Section Detail -->
                   <tr class="RowAustere4">
-                    <td style="style=&quot;BACKGROUND-COLOR: {vbgcolor}"><input id="ReportesMyMDetailIdReporte_{Detail:rowNumber}" type="hidden" value="{IdReporte}" name="{IdReporte_Name}" ccsserviceable="true" ccstype="Component" ccsname="IdReporte" ccsid="36" />
+                    <td style="style=&amp;quot;BACKGROUND-COLOR: {vbgcolor}"><input type="hidden" id="ReportesMyMDetailIdReporte_{Detail:rowNumber}" value="{IdReporte}" name="{IdReporte_Name}">
                       <!-- BEGIN Link Nombre --><a href="{Nombre_Src}" id="ReportesMyMDetailNombre_{Detail:rowNumber}"><font color="{vfontcolor}">{Nombre}</font></a><!-- END Link Nombre -->{ReportLabel1} {activo} </td> 
-                    <td>&nbsp; </td> 
+                    <td>&nbsp; </td>
                   </tr>
  <!-- END Section Detail -->
                   <!-- BEGIN Section Grupo_Footer --><!-- END Section Grupo_Footer -->
                   <!-- BEGIN Section Report_Footer -->
                   <!-- BEGIN Panel NoRecords -->
                   <tr class="NoRecordsAustere4">
-                    <td colspan="2">No hay registros</td> 
+                    <td colspan="2">No hay registros</td>
                   </tr>
  <!-- END Panel NoRecords --><!-- END Section Report_Footer -->
                 </table>
- 
               </div>
- </td> 
+            </td>
           </tr>
- 
         </table>
- <!-- END Report ReportesMyM -->
+        <!-- END Report ReportesMyM -->
       </div>
- </td> 
+    </td> 
     <td style="VERTICAL-ALIGN: top">
       <div id="ppal_rep">
         {lReportContent} 
       </div>
- </td> 
+    </td>
   </tr>
 </table>
 <p>&nbsp;</p>
