Validación de tamaño del dato paquete en la inseción de hallazgos
Se modifica PPMCsCrbCalidad.php en el querie que inserta los hallazgos,
existia un datos en la columna paquete (que en la bd es un varchar de 75
caracteres) y el registro era de una longitud de 175

--- a/TableroSLAs/PPMCsCrbCalidad.html
+++ b/TableroSLAs/PPMCsCrbCalidad.html
@@ -177,7 +177,8 @@ function calculaSLA(){
                 </tr>
  
                 <tr class="Controls">
-                  <td class="th"><label for="mc_info_rs_cr_calidadevidencia_salvedad" style="display: block;">Evidencia de </br>Salvedad </label><input type="checkbox" id="mc_info_rs_cr_calidadevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
+                  <td class="th"><label for="mc_info_rs_cr_calidadevidencia_salvedad" style="display: block;">Evidencia de <br>
+                    Salvedad </label><input type="checkbox" id="mc_info_rs_cr_calidadevidencia_salvedad" value="1" name="{evidencia_salvedad_Name}" {evidencia_salvedad}></td> 
                   <td colspan="3">&nbsp;<label for="mc_info_rs_cr_calidadobservacion_salvedad" style="display: block;">Observaciones de evidencia de salvedad</label> <textarea id="mc_info_rs_cr_calidadobservacion_salvedad" rows="3" cols="60" name="{observacion_salvedad_Name}">{observacion_salvedad}</textarea></td>
                 </tr>
  
