Se agrega opción para carga de métricas vía web
Nuevos php's para la carga de archivos de métricas vía web, asi como la
modificación del header.

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -61,67 +61,10 @@
 </td>
 </tr>
  
-<tr style="HEIGHT: 25px">
-  <td colspan="2">
-    <!-- BEGIN Panel Panel2 -->
-    <div style="FLOAT: left; MARGIN: 0px 10px">
-      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
-        <tr>
-          <td class="HeaderLeft"></td> 
-          <td class="th"><strong>&nbsp;<a href="{Link4_Src}" id="HeaderPanel2Link4">Tablero SLAs</a></strong>&nbsp;</td> 
-          <td class="HeaderRight"></td> 
-        </tr>
- 
-      </table>
- 
-    </div>
- 
-    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
-      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
-        <tr>
-          <td class="HeaderLeft"></td> 
-          <td class="th"><strong>&nbsp;<a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y mediciones</a></strong>&nbsp;</td> 
-          <td class="HeaderRight"></td> 
-        </tr>
- 
-      </table>
- 
-    </div>
- 
-    <!--    <div>
-      &nbsp; 
-    </div>-->
-    <!-- END Panel Panel2 -->
-    <!-- BEGIN Panel Panel4 -->
-    <div style="FLOAT: left; MARGIN: 0px 10px">
-      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
-        <tr>
-          <td class="HeaderLeft"></td> 
-          <td class="th"><strong>&nbsp; 
-            <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes sitio SAT</a><!-- END Link Link6 -->&nbsp;{LabelReportesSitioSAT}</strong></td> 
-          <td class="HeaderRight"></td> 
-        </tr>
- 
-      </table>
- 
-    </div>
- 
-    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
-      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
-        <tr>
-          <td class="HeaderLeft"></td> 
-          <td class="th"><strong>
-            <!-- BEGIN Link Link7 --><a href="{Link7_Src}" id="HeaderPanel4Link7">Seguimiento Operativo</a><!-- END Link Link7 -->{LabelSeguimientoOperativo}<strong></strong> </strong></td> 
-          <td class="HeaderRight"></td> 
-        </tr>
- 
-      </table>
- 
-    </div>
- <!-- END Panel Panel4 --></td> 
-  <td>
+<tr>
+  <td colspan="3">
     <!-- BEGIN Panel Panel1 -->
-    <table style="BORDER-LEFT-WIDTH: 1px; BORDER-RIGHT-WIDTH: 1px; BORDER-BOTTOM-WIDTH: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 0px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px" width="437">
+    <table style="BORDER-LEFT-WIDTH: 1px; BORDER-RIGHT-WIDTH: 1px; BORDER-BOTTOM-WIDTH: 0px; PADDING-BOTTOM: 0px; PADDING-TOP: 0px; PADDING-LEFT: 0px; PADDING-RIGHT: 0px; BORDER-TOP-WIDTH: 0px" width="437" align="right">
       <tr style="HEIGHT: 24px">
         <td>
           <!-- BEGIN ImageLink img_abre_pantalla --><a href="{img_abre_pantalla}" id="HeaderPanel1img_abre_pantalla"><img style="BORDER-LEFT-WIDTH: 0px; BORDER-RIGHT-WIDTH: 0px; BORDER-BOTTOM-WIDTH: 0px; BORDER-TOP-WIDTH: 0px" alt="{img_abre_pantalla}" src="images/abre_verde.jpg" height="25" whidth="25"><font style="FONT-SIZE: 12px; font-color: green; font-weigth: bold">Ver pantalla completa</font></a> <!-- END ImageLink img_abre_pantalla --></td> 
@@ -140,5 +83,72 @@
  
     </table>
  <!-- END Panel Panel1 --></td>
+</tr>
+ 
+<tr style="HEIGHT: 25px">
+  <td colspan="3">
+    <!-- BEGIN Panel Panel2 -->
+    <!-- BEGIN Link Link4 -->
+    <div style="FLOAT: left; MARGIN: 0px 10px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+          <td class="th"><strong><a href="{Link4_Src}" id="HeaderPanel2Link4">Tablero SLAs</a></strong></td> 
+        </tr>
+ 
+      </table>
+ 
+    </div>
+ <!-- END Link Link4 -->
+    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+          <td class="th"><strong><a href="{Link5_Src}" id="HeaderPanel2Link5">Métricas y mediciones</a></strong></td> 
+        </tr>
+ 
+      </table>
+ 
+    </div>
+ 
+    <!--    <div>
+      &nbsp; 
+    </div>-->
+    <!-- END Panel Panel2 -->
+    <!-- BEGIN Panel Panel4 -->
+    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+          <td class="th"><strong>
+            <!-- BEGIN Link Link6 --><a href="{Link6_Src}" id="HeaderPanel4Link6" target="_blank">Reportes sitio SAT</a><!-- END Link Link6 -->{LabelReportesSitioSAT}</strong></td> 
+        </tr>
+ 
+      </table>
+ 
+    </div>
+ 
+    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+          <td class="HeaderLeft"></td> 
+          <td class="th"><strong>
+            <!-- BEGIN Link Link7 --><a href="{Link7_Src}" id="HeaderPanel4Link7">Seguimiento Operativo</a><!-- END Link Link7 -->{LabelSeguimientoOperativo}<strong></strong> </strong></td> 
+          <td class="HeaderRight"></td> 
+        </tr>
+ 
+      </table>
+ 
+    </div>
+    <div style="FLOAT: left; MARGIN: 0px 10px 0px 0px">
+      <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
+        <tr>
+          <td class="HeaderLeft"></td> 
+          <td class="th"><strong>
+    <!-- BEGIN Link Link8 --><a href="{Link8_Src}" id="HeaderPanel4Link8">Carga archivo de métricas</a><!-- END Link Link8 --><!-- END Panel Panel4 --></td>
+          <td class="HeaderRight"></td> 
+        </tr>
+ 
+      </table>
+ 
+    </div>
+
 </tr>
 </table>
