Se modifican los limites del link8
Se modifican los limites del link8 para que no se muetre un hd con
background verde.

--- a/TableroSLAs/Header.html
+++ b/TableroSLAs/Header.html
@@ -141,8 +141,9 @@
       <table class="Header" style="WIDTH: 25% !important" cellspacing="0" cellpadding="0" border="0">
         <tr>
           <td class="HeaderLeft"></td> 
+          <!-- BEGIN Link Link8 -->
           <td class="th"><strong>
-    <!-- BEGIN Link Link8 --><a href="{Link8_Src}" id="HeaderPanel4Link8">Carga archivo de métricas</a><!-- END Link Link8 --><!-- END Panel Panel4 --></td>
+    		<a href="{Link8_Src}" id="HeaderPanel4Link8">Carga archivo de métricas</a><!-- END Link Link8 --><!-- END Panel Panel4 --></td>
           <td class="HeaderRight"></td> 
         </tr>
  
